Fixing hr text on mobiles

--- a/themes/harassmap/assets/scss/modules/_typography.scss
+++ b/themes/harassmap/assets/scss/modules/_typography.scss
@@ -80,9 +80,10 @@ p {
 
   .hr__text {
     background-color: $white;
+
     z-index: 2;
 
-    @include rem((padding: 0 25px 0 0));
+    @include rem((padding: 0 25px 0 0, line-height: 35px));
 
     .ar & {
       @include rem((padding: 0 0 0 25px));
